# Project-Space-Invaders

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  run.sh
SFML-2.4.2/include/SFML/: Config.hpp  Main.hpp  OpenGL.hpp
SFML-2.4.2/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML-2.4.2/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Glyph.hpp  Image.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  View.hpp
SFML-2.4.2/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  (+8 more)
doc/: Doxyfile  Doxyfile-mcss  custom.css
doc/html/: Bullet_8cpp.html  Bullet_8cpp__incl.map  Bullet_8cpp__incl.md5  Bullet_8h.html  Bullet_8h__dep__incl.map  Bullet_8h__dep__incl.md5  Bullet_8h__incl.map  Bullet_8h__incl.md5  Bullet_8h_source.html  Collision_8cpp.html  Collision_8cpp__incl.map  Collision_8cpp__incl.md5  Collision_8h.html  Collision_8h__dep__incl.map  Collision_8h__dep__incl.md5  Collision_8h__incl.map  Collision_8h__incl.md5  Collision_8h_source.html  Controller_8cpp.html  Controller_8cpp__incl.map  Controller_8cpp__incl.md5  Controller_8h.html  Controller_8h__dep__incl.map  Controller_8h__dep__incl.md5  Controller_8h__incl.map  Controller_8h__incl.md5  Controller_8h_source.html  Draw_8cpp.html  Draw_8cpp__incl.map  Draw_8cpp__incl.md5  Draw_8h.html  Draw_8h__dep__incl.map  Draw_8h__dep__incl.md5  Draw_8h__incl.map  Draw_8h__incl.md5  Draw_8h_source.html  EnemyShip_8h.html  EnemyShip_8h__dep__incl.map  EnemyShip_8h__dep__incl.md5  EnemyShip_8h__incl.map  (+314 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_8.js  files_9.js  files_a.js  files_b.js  (+33 more)
input/: bullet.json  bulletExtra.json  enemy.json  enemyExtra.json  game.json  level1.json  level2.json  player.json  world.json
src/: AI.cpp  AI.h  BGTile.cpp  Bullet.h  Collision.h  Controller.cpp  Controller.h  Draw.cpp  Draw.h  EnemyShip.cpp  Entity.cpp  Entity.h  Game.cpp  Game.h  GameParser.cpp  GameParser.h  Hitbox.cpp  Hitbox.h  Observer.cpp  Observer.h  Parser.cpp  Parser.h  PlayerShip.cpp  PlayerShip.h  Position.h  Ship.cpp  Ship.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.h  bad_file.cpp  json.hpp  main.cpp  testMain.cpp
src/Control/: Controller.cpp  Controller.h
src/Entity/: BGTile.cpp  BGTile.h  Bullet.cpp  Bullet.h  EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  PlayerShip.cpp  PlayerShip.h  Position.cpp  Ship.cpp  Ship.h  World.cpp  World.h
src/Exception/: bad_file.cpp  bad_file.h  bad_type.cpp  bad_type.h  entity_underflow.cpp  entity_underflow.h
src/Model/: BGTile.cpp  Bullet.cpp  Bullet.h  EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  PlayerShip.cpp  PlayerShip.h  Ship.cpp  Ship.h  World.cpp  World.h
src/ObserverPattern/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
src/Parser/: GameParser.cpp  GameParser.h
src/View/: Draw.cpp  Draw.h
src/utils/: Collision.cpp  Collision.h  Event.h  Global.h  Hitbox.cpp  Hitbox.h  Position.cpp  Position.h  Stopwatch.cpp  Stopwatch.h  Transformation.cpp  Transformation.h
src/utils/ObserverPattern/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
(+52 files in other folders)
